<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="14dp"
        android:layout_marginTop="40dp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="8dp"
        android:background="#f9f7f7">

        <EditText
            android:id="@+id/et_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/nome"
            android:textColorHint="#D3D3D3"/>

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/e_mail"
            android:layout_marginTop="30dp"
            android:textColorHint="#D3D3D3"/>

        <EditText
            android:id="@+id/et_phone_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="número do celular"
            android:layout_marginTop="30dp"
            android:textColorHint="#D3D3D3"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:layout_marginTop="30dp"
            android:textColorHint="#D3D3D3"
            android:hint="número do cartão"/>

        <TextView
            android:id="@+id/textView_cardDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/numero_do_cartao"
            android:layout_marginTop="30dp"
            android:visibility="gone"
            android:textColorHint="#D3D3D3"/>

        <Button
            android:id="@+id/btn_read_card_from_cam"
            android:layout_marginTop="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffa500"
            android:background="#ffffff"
            android:elevation="30dp"
            android:text="@string/btn_ler_cartao_pela_camera" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:orientation="horizontal">

            <android.support.v7.widget.AppCompatCheckBox
                android:id="@+id/checkbox_terms_of_use"
                android:layout_width="80dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="3dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/editText_terms_of_use"
                android:layout_width="270dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center|left"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:clickable="true"
                android:text="@string/terms_accept" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_account_request"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="#ffa500"
            android:background="#ffffff"
            android:layout_marginBottom="32dp"
            android:text="@string/solicitar_cadastro" />
    </LinearLayout>

</LinearLayout>